--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,14 @@
-*{
-    box-sizing: border-box;
-    font-family: "Black Han Sans", sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: "Black Han Sans", sans-serif;
+  font-family: "Do Hyeon", sans-serif;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100%;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #c6b5e2;
+  height: 100%;
 }
